--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,8 @@ scripts:
     - ibmcloud config --check-version=false
     - ibmcloud plugin install -f kubernetes-service
     - ibmcloud plugin install -f container-registry
-    - ibmcloud login --apikey c927b53a-bf8e-4d68-b3e0-ac3979c7554f -r us-south -g Default
-    - ibmcloud ks cluster config --cluster "${IKS_CLUSTER}"
-    - ibmcloud ks cluster config --cluster "${IKS_CLUSTER}"
+    - ibmcloud login -a cloud.ibm.com -r us-south -g Default
+    - ibmcloud ks cluster config --cluster c3p8us7d0cj2bgr2g73g
     - kubectl config current-context
     - kubectl apply -f deploy.yml
     - kubectl apply -f service.yml
