--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ deploy:
    PORT: '5001'
    DEPLOYMENT_NAME: 'iks-test'
    PORT: '5001'
+   Email: 'tamish.verma@tcs.com'
+   Password: 'Devops12@'
 
 
   
@@ -38,6 +40,7 @@ scripts:
     - curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
     - ibmcloud --version
     - ibmcloud config --check-version=false
+    - ibmcloud login --apikey c927b53a-bf8e-4d68-b3e0-ac3979c7554f -r "${IBM_CLOUD_REGION}" -g Default
     - ibmcloud plugin install -f kubernetes-service
     - kubectl apply -f deploy.yml
     - kubectl apply -f service.yml
