--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,10 @@ deploy:
    DEPLOYMENT_NAME: 'iks-test'
    PORT: '5001'
 
-
+before_install: 
+  - RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.t)/bin/linux/amd64/kubectl \
+    && chmod +x ./kubectl \
+    && mv ./kubectl /usr/local/bin/kubectl
   
 scripts: 
     - curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
